--- a/home.html
+++ b/home.html
@@ -1,14 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Home Page</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
+    <meta charset="UTF-8">
+    <title>Project</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
 
+<div id="header">
+    HEADER
+</div>
 
+<div id="container">
+    <div class="book_row">
+        <div class="book">
+            <img src="" alt="img">
+        </div>
+        <div class="book">
+            <img src="" alt="img">
+        </div>
+        <div class="book">
+            <img src="" alt="img">
+        </div>
+        <div class="book">
+            <img src="" alt="img">
+        </div>
+    </div>
+
+    <div class="book_row">
+        <div class="book">
+            <img src="" alt="img">
+        </div>
+        <div class="book">
+            <img src="" alt="img">
+        </div>
+        <div class="book">
+            <img src="" alt="img">
+        </div>
+        <div class="book">
+            <img src="" alt="img">
+        </div>
+    </div>
+
+    <div class="book_row">
+        <div class="book">
+            <img src="" alt="img">
+        </div>
+        <div class="book">
+            <img src="" alt="img">
+        </div>
+        <div class="book">
+            <img src="" alt="img">
+        </div>
+        <div class="book">
+            <img src="" alt="img">
+        </div>
+    </div>
+</div>
+
+<div id="footer">
+    FOOTER
+</div>
 
 </body>
 </html>
