--- a/home.html
+++ b/home.html
@@ -9,58 +9,92 @@
 <body>
 
 <div id="header">
-    HEADER
+    <div>
+        <img src="resources/logo.png" alt="logo" id="logo">
+    </div>
+    <div id="menu">
+        <ul>
+            <li>
+                <button>Home Page</button>
+            </li>
+            <li>
+                <button>About Us</button>
+            </li>
+            <li>
+                <button>Contact US</button>
+            </li>
+            <li>
+                <button>Pannier</button>
+            </li>
+            <li>
+                <button>Sign in</button>
+            </li>
+        </ul>
+    </div>
 </div>
 
 <div id="container">
     <div class="book_row">
         <div class="book">
-            <img src="" alt="img">
+            <img src="resources/tintin.jpg" alt="Tintin">
+            <h3>Tintin</h3>
         </div>
         <div class="book">
-            <img src="" alt="img">
+            <img src="resources/asterix.jpg" alt="Astérix">
+            <h3>Astérix</h3>
         </div>
         <div class="book">
-            <img src="" alt="img">
+            <img src="resources/legendaires.jpg" alt="Les Légendaires">
+            <h3>Les Légendaires</h3>
         </div>
         <div class="book">
-            <img src="" alt="img">
-        </div>
-    </div>
-
-    <div class="book_row">
-        <div class="book">
-            <img src="" alt="img">
-        </div>
-        <div class="book">
-            <img src="" alt="img">
-        </div>
-        <div class="book">
-            <img src="" alt="img">
-        </div>
-        <div class="book">
-            <img src="" alt="img">
+            <img src="resources/spirou.jpg" alt="Spirou">
+            <h3>Spirou et Fantasio</h3>
         </div>
     </div>
 
     <div class="book_row">
         <div class="book">
-            <img src="" alt="img">
+            <img src="resources/ducobu.jpg" alt="Ducobu">
+            <h3>Ducobu</h3>
         </div>
         <div class="book">
-            <img src="" alt="img">
+            <img src="resources/luckyluke.jpg" alt="Lucky Luke">
+            <h3>Lucky Luke</h3>
         </div>
         <div class="book">
-            <img src="" alt="img">
+            <img src="resources/bouleetbill.jpg" alt="Boule et Bill">
+            <h3>Boule et Bill</h3>
         </div>
         <div class="book">
-            <img src="" alt="img">
+            <img src="resources/schtroumpfs.jpg" alt="Les Schtroumpfs">
+            <h3>Les Schtroumpfs</h3>
+        </div>
+    </div>
+
+    <div class="book_row">
+        <div class="book">
+            <img src="resources/blacketmortimer.jpg" alt="Black et Mortimer">
+            <h3>Black et Mortimer</h3>
+        </div>
+        <div class="book">
+            <img src="resources/titeuf.jpg" alt="Titeuf">
+            <h3>Titeuf</h3>
+        </div>
+        <div class="book">
+            <img src="resources/kidpaddle.jpg" alt="Kid Paddle">
+            <h3>Kid Paddle</h3>
+        </div>
+        <div class="book">
+            <img src="resources/gameover.jpg" alt="Game Over">
+            <h3>Game Over</h3>
         </div>
     </div>
 </div>
 
 <div id="footer">
-    FOOTER
+    Copyright &copy; 2022 Pierre and Lucas <br>
+    <a href="mailto:piloulib@gmail.com">piloulib@gmail.com</a>
 </div>
 
 </body>
