avancement contactus.html + aboutus.html style2.css+style3.css

--- a/home.html
+++ b/home.html
@@ -15,19 +15,29 @@
     <div id="menu">
         <ul>
             <li>
-                <button>Home Page</button>
+                <a href="home.html">
+                    <button>Home Page</button>
+                </a>
             </li>
             <li>
-                <button>About Us</button>
+                <a href="aboutus.html">
+                    <button>About Us</button>
+                </a>
             </li>
             <li>
-                <button>Contact US</button>
+                <a href="contactus.html">
+                    <button>Contact US</button>
+                </a>
             </li>
             <li>
-                <button>Pannier</button>
+                <a href="card.html">
+                    <button>Cart</button>
+                </a>
             </li>
             <li>
-                <button>Sign in</button>
+                <a href="signin.html">
+                    <button>Sign in</button>
+                </a>
             </li>
         </ul>
     </div>
