--- a/contactus.html
+++ b/contactus.html
@@ -31,7 +31,7 @@
             </li>
             <li>
                 <a href="card.html">
-                    <button>Pannier</button>
+                    <button>Cart</button>
                 </a>
             </li>
             <li>
